Made all changes suggested by R_cmd_check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,31 @@ export(CombineSplits)
 export(MakeModelDefaults)
 export(ModelTrain)
 export(chemmodlab)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,palette)
+importFrom(grDevices,rainbow)
+importFrom(grDevices,rgb)
+importFrom(graphics,abline)
+importFrom(graphics,axis)
+importFrom(graphics,box)
+importFrom(graphics,image)
+importFrom(graphics,layout)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(methods,is)
+importFrom(stats,TukeyHSD)
+importFrom(stats,anova)
+importFrom(stats,aov)
+importFrom(stats,cor)
+importFrom(stats,df)
+importFrom(stats,dist)
+importFrom(stats,fitted.values)
+importFrom(stats,glm)
+importFrom(stats,predict)
+importFrom(stats,qt)
+importFrom(stats,var)
+importFrom(utils,lsf.str)
