--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,5 +53,4 @@ Author: Jacqueline Hughes-Oliver [aut],
 Maintainer: Jeremy Ash <jrash@ncsu.edu>
 Suggests:
     knitr,
-    rmarkdown
-VignetteBuilder: knitr
+    rmarkdowns
