--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
-sudo: false
-cache: packages
-warnings_are_errors: false
+language: r
+warnings_are_errors: true
+sudo: required
