Submitted v1.1.0 to CRAN

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,5 +52,6 @@ Author: Jacqueline Hughes-Oliver [aut],
 Maintainer: Jeremy Ash <jrash@ncsu.edu>
 Suggests:
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 Encoding: UTF-8
