--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: r
+cache: packages
 warnings_are_errors: true
 sudo: required
-cache: packages
 
 apt_packages:
-  - default-jdk
+  - r-cran-rjava
 
 before_install:
-  - export JAVA_HOME=/usr/lib/jvm/java-11-openjdk-amd64
-  - export PATH=$PATH:$JAVA_HOME/bin
-  - export LD_LIBRARY_PATH=/usr/lib/jvm/java-11-openjdk-amd64/lib
-  - sudo R CMD javareconf
+  - sudo $(which R) CMD javareconf
