--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ sudo: required
 
 apt_packages:
   - r-cran-rjava
+  - libgdal-dev
+  - libproj-dev
 
 before_install:
   - sudo $(which R) CMD javareconf
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install libcgal-dev libglu1-mesa-dev mesa-common-dev; fi
+
