Documenting PerfCurveBands and PerfCurveTest

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(ApplicabilityDomain)
 export(CombineSplits)
 export(MakeModelDefaults)
 export(ModelTrain)
+export(PerfCurveBands)
+export(PerfCurveTest)
 export(Performance)
 export(chemmodlab)
 import(MASS)
