Estimate lambda using KernSmooth, add bandwidth parameter to PerfCurveBands, truncate recall CIs at 0 and ideal

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,8 @@ Imports:
     grDevices,
     utils,
     methods,
-    signal
+    signal,
+    KernSmooth
 RoxygenNote: 7.1.1
 NeedsCompilation: no
 Author: Jacqueline Hughes-Oliver [aut],
