Estimate lambda using adaptive nn aproach in package np

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,13 +12,13 @@ export(PerfCurveBands)
 export(PerfCurveTest)
 export(Performance)
 export(chemmodlab)
-import(KernSmooth)
 import(MASS)
 import(MSQC)
 import(fingerprint)
 import(grDevices)
 import(graphics)
 import(methods)
+import(np)
 import(rcdk)
 import(signal)
 import(stats)
