Add @export to function documentation in hit_curve.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(ModelTrain,default)
 S3method(plot,chemmodlab)
 export(ApplicabilityDomain)
 export(CombineSplits)
+export(HitCurve)
 export(MakeModelDefaults)
 export(ModelTrain)
 export(PerfCurveBands)
