Update to namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(ModelTrain,default)
 S3method(plot,chemmodlab)
 export(ApplicabilityDomain)
 export(CombineSplits)
+export(HitCurve)
+export(HitCurveDiff)
 export(MakeModelDefaults)
 export(ModelTrain)
 export(PerfCurveBands)
