--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ S3method(ModelTrain,default)
 S3method(plot,chemmodlab)
 export(ApplicabilityDomain)
 export(CombineSplits)
-export(HitCurve)
-export(HitCurveDiff)
+export(HitEnrich)
+export(HitEnrichDiff)
 export(MakeModelDefaults)
 export(ModelTrain)
 export(PerfCurveBands)
