--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: chemmodlab
 Type: Package
 Title: A Cheminformatics Modeling Laboratory for Fitting and Assessing Machine Learning Models
-Version: 1.1.0.9000
-Date: 2020-09-06
+Version: 2.0.0
+Date: 2022-05-01
 Authors@R: c(
     person("Jacqueline", "Hughes-Oliver", email = "hughesol@ncsu.edu", role = c("aut")),
     person("Jeremy", "Ash", email = "jrash@ncsu.edu", role = c("aut", "cre")), 
@@ -26,6 +26,7 @@ BugReports: https://github.com/jrash/ChemModLab/issues
 Imports:
     fingerprint,
     rcdk,
+    KernSmooth,
     MSQC,
     class (>= 7.3.14),
     e1071 (>= 1.6.7),
