--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(PerfCurveBands)
 export(PerfCurveTest)
 export(Performance)
 export(chemmodlab)
+import(KernSmooth)
 import(MASS)
 import(MSQC)
 import(fingerprint)
