--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,8 +24,6 @@ LazyData: TRUE
 URL: https://github.com/jrash/ChemModLab
 BugReports: https://github.com/jrash/ChemModLab/issues
 Imports:
-    fingerprint,
-    rcdk,
     KernSmooth,
     MSQC,
     class (>= 7.3.14),
@@ -44,8 +42,7 @@ Imports:
     graphics,
     grDevices,
     utils,
-    methods,
-    np
+    methods
 RoxygenNote: 7.1.1
 NeedsCompilation: no
 Author: Jacqueline Hughes-Oliver [aut],
